<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Video &amp; Audio Group Chat Sample</string>
    <string name="action_log_out">Log out</string>
    <string name="login_as">Login as</string>
    <string name="logged_in_as">Logged In as</string>
    <string name="outputing_audio_call">Outputing Audio Call - </string>
    <string name="incoming_call">Incoming Call</string>
    <string name="also_on_call">Also on call:</string>
    <string name="edit_opponents_list">Edit opponents list</string>
    <string name="incoming_audio_call">Incoming Audio Call</string>
    <string name="incoming_video_call">Incoming Video Call</string>
    <string name="connect">Connect...</string>
    <string name="checking">Checking...</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>

    <string name="users_tag">webrtcusers</string>

    <string name="welcoming_message">Login as any user on this deviсe and another(s) users on another device</string>
    <string name="select_user_to_call">Select Users You Want to Call</string>

    
    <string name="btn_audio_call">AUDIO CALL</string>
    <string name="btn_video_call">VIDEO CALL</string>
    <string name="opponentsListActionBarTitle"><![CDATA[Video & Audio Group Chat Sample]]></string>
    <string name="current_version">0.9.1</string>
    <string name="rejected">Rejected</string>
    <string name="noAnswer">No answer</string>
    <string name="hungUp">Hung up</string>
    <string name="closed">Closed</string>
    <string name="time_out">Time Out</string>
    <string name="failed">Failed</string>
    <string name="WIFI_DISABLED">Call was stoped because connection was lost</string>
    <string name="NETWORK_ABSENT">Connection lost</string>

    <!-- Dialogs strings. -->
    <string name="dlg_signal_error">Disconnected... Please check your Internet connection!</string>

    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="blue_green">#008080</color>
    <color name="grey">#606060</color>
    <color name="gold">#FFD700</color>
    <color name="spring_bud">#A7FC00</color>
    <color name="water_bondi_beach">#0095B6</color>
    <color name="coral">#FF4040</color>
    <color name="lime">#00FF00</color>
    <color name="may_green">#4C9141</color>
    <color name="mauveine">#EF0097</color>
    <color name="blue">#1FCECB</color>
    <color name="orange">#FFA500</color>
    <color name="gentianaceae_blue">#2A6478</color>
    <color name="blue_krayola">#1F75FE</color>
    <color name="red">#FF0000</color>
    <color name="white_blue">#00BFFF</color>
    <color name="pink">#FF7A7A</color>
    <color name="green">#45D100</color>
    <color name="white_green">#A9FF80</color>
    <color name="black_transparent_30">#30000000</color>
    <color name="black_transparent_50">#50000000</color>
    <color name="white_transparent_80">#80FFFFFF</color>

    <!-- Settings strings. -->
    <string name="pref_default_value">Default</string>

    <string name="pref_resolution_key">resolution_preference</string>
    <string name="pref_resolution_title">Video resolution.</string>
    <string name="pref_resolution_dlg">Enter RTC local video resolution.</string>
    <string name="pref_resolution_default">-1</string>

    <string name="pref_fps_key">fps_preference</string>
    <string name="pref_fps_title">Camera fps.</string>
    <string name="pref_fps_dlg">Enter local camera fps.</string>
    <string name="pref_fps_default">0</string>

    <string name="pref_startbitrate_key">startbitrate_preference</string>
    <string name="pref_startbitrate_title">Start bitrate setting.</string>
    <string name="pref_startbitrate_dlg">Start bitrate setting.</string>
    <string name="pref_startbitrate_default">Default</string>

    <string name="pref_startbitratevalue_key">startbitratevalue_preference</string>
    <string name="pref_startbitratevalue_title">Video encoder start bitrate.</string>
    <string name="pref_startbitratevalue_dlg">Enter video encoder start bitrate in kbps.(Max is 2000)</string>
    <string name="pref_startbitratevalue_default">1000</string>

    <string name="pref_videocodec_key">videocodec_preference</string>
    <string name="pref_videocodec_title">Default video codec.</string>
    <string name="pref_videocodec_dlg">Select default video codec.</string>
    <string name="pref_videocodec_default">0</string>

    <string name="pref_hwcodec_key">hwcodec_preference</string>
    <string name="pref_hwcodec_title">Video codec hardware acceleration.</string>
    <string name="pref_hwcodec_dlg">Use hardware accelerated video codec (if available).</string>
    <string name="pref_hwcodec_default">true</string>

    <string name="pref_value_enabled">Enabled</string>
    <string name="pref_value_disabled">Disabled</string>

    <string name="pref_room_server_url_key">room_server_url_preference</string>
    <string name="pref_room_server_url_title">Room server URL.</string>
    <string name="pref_room_server_url_dlg">Enter a room server URL.</string>
    <string name="pref_room_server_url_default" translatable="false">https://apprtc.appspot.com</string>

    <string name="pref_displayhud_key">displayhud_preference</string>
    <string name="pref_displayhud_title">Display call statistics.</string>
    <string name="pref_displayhud_dlg">Display call statistics.</string>
    <string name="pref_displayhud_default" translatable="false">false</string>
    <string name="action_settings">Settings</string>
    <string name="pref_audiocodec_key">pref_audio_codec</string>
    <string name="pref_audiocodec_title">Default audio codec</string>
    <string name="pref_audiocodec_def">ISAC</string>
    <string name="pref_audiocodec_dlg">Select default audio codec</string>
    <string name="btn_screen_capture">screenShot</string>
    <string name="accepted">Accepted</string>

</resources>
