<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="@string/pref_resolution_key"
        android:title="@string/pref_resolution_title"
        android:defaultValue="@string/pref_resolution_default"
        android:dialogTitle="@string/pref_resolution_dlg"
        android:entries="@array/videoResolutions"
        android:entryValues="@array/videoResolutionsValues" />

    <ListPreference
        android:key="@string/pref_startbitrate_key"
        android:title="@string/pref_startbitrate_title"
        android:defaultValue="@string/pref_startbitrate_default"
        android:dialogTitle="@string/pref_startbitrate_dlg"
        android:entries="@array/startBitrate"
        android:entryValues="@array/startBitrate" />

    <EditTextPreference
        android:key="@string/pref_startbitratevalue_key"
        android:title="@string/pref_startbitratevalue_title"
        android:inputType="number"
        android:maxLength="4"
        android:defaultValue="@string/pref_startbitratevalue_default"
        android:dialogTitle="@string/pref_startbitratevalue_dlg" />

    <ListPreference
        android:key="@string/pref_videocodec_key"
        android:title="@string/pref_videocodec_title"
        android:defaultValue="@string/pref_videocodec_default"
        android:dialogTitle="@string/pref_videocodec_dlg"
        android:entries="@array/videoCodecs"
        android:entryValues="@array/videoCodecsValues" />

    <ListPreference
        android:key="@string/pref_audiocodec_key"
        android:title="@string/pref_audiocodec_title"
        android:defaultValue="@string/pref_audiocodec_def"
        android:dialogTitle="@string/pref_audiocodec_dlg"
        android:entries="@array/audioCodecs"
        android:entryValues="@array/audioCodecs" />

    <CheckBoxPreference
        android:key="@string/pref_hwcodec_key"
        android:title="@string/pref_hwcodec_title"
        android:dialogTitle="@string/pref_hwcodec_dlg"
        android:defaultValue="@string/pref_hwcodec_default" />


</PreferenceScreen>